--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,206 +1,5 @@
-/*
- * Very simple reset 
- * --- */
+@import "responsive";
+@import "reset";
+@import "typography";
+@import "layout";
 
-* {
-	padding: 0;
-	margin: 0;
-} 
-
-/*
- * Inheriting box-sizing Probably Slightly Better Best-Practice
- * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- * --- */
-
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/*
- * Typography
- * --- --- --- */
-
-body {
-	font: 14px/1.5 "Avenir Next", sans-serif;
-}
-
-h1, h2, h3 {
-	font-family: "Avenir Next", sans-serif;
-	font-weight: 500;
-}
-
-h1 { font-size: 2em; }
-h2 { font-size: 1.5em; padding-left: 0.6em; }
-
-li {
-	list-style: outside none;
-}
-
-p {
-	padding: 0 0 1em 0;
-}
-
-/*
- * Layout
- * --- --- --- */
-
-body {
-	padding: 2em;
-}
-
-a {
-	text-decoration: none;
-	color: #800;
-	transition: color 0.3s ease;
-}
-
-a .label {
-}
-
-a .value {
-	color: #CCC;
-	transition: color 0.3s ease;
-	font-style: italic;
-}
-
-a:hover {
-	color: #090;
-}
-
-a:hover .label {
-}
-a:hover .value {
-	/*text-decoration: underline;*/
-	color: #666;
-}
-
-li a {
-	display: block;
-	padding: 0.8em 1em;
-	border-radius: 0.3em;
-}
-
-li a:hover {
-	background: rgba(0,0,0,0.02);
-}
-
-.container {
-	display: block;
-	max-width: 40em;
-	margin: 0 auto;
-	border-radius: 0.3em;
-	padding: 2em;
-}
-
-h1, h2 {
-	border-bottom: solid 1px #DDD;
-	padding-bottom: 0.5em;
-	margin-bottom: 0.8em;
-}
-
-h1 {
-	padding-bottom: 0.2em;
-	padding-left: 0.5em;
-	margin-left: -0.5em;
-}
-
-header, section {
-	padding: 0 0 1.5em 0;
-}
-
-section {
-	margin: 0 -1em;
-}
-
-header img {
-	display: block;
-	border: 1px solid #FFF;
-	background: #fff;
-	padding: 0.3em;
-	margin-bottom: 2em;
-	border-radius: 50%;
-	box-shadow: 0 0 5px 0px rgba(0,0,0,0.2);
-}
-
-span {
-	display: block;
-}
-
-ul li {
-}
-
-ul li:hover {
-}
-
-/*
- * Resposive
- * Stuff
- * --- */
-
-@media screen and (max-width: 700px) {
-
-	header img {
-		margin: 0 auto 2em auto;
-	}
-
-}
-
-@media screen and (min-width: 700px) {
-
-	header img {
-		float: right;
-		margin: 0 0 2em 2em;
-	}
-
-}
-
-@media screen and (min-width: 600px) {
-
-	body {
-		font-size: 16px;
-	}
-
-	ul {
-		display: flex;
-		flex-wrap: wrap;
-	}
-
-	ul li {
-		flex: 0 0 50%;
-	}
-	
-}
-
-@media screen and (min-width: 1200px) {
-
-	body {
-		font-size: 18px;
-	}
-
-	.container {
-		display: block;
-		max-width: inherit;
-	}
-	
-	header, section {
-		width: 45vw;
-	}
-
-	section:nth-child(3){
-		float: right;
-		clear: both;
-	}
-
-	section:nth-child(3){
-		margin-top: -19vh;
-	}
-
-	ul li {
-		width: 50%;
-		white-space: nowrap;	
-	}	
-}
