--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,106 +3,85 @@
  * --- --- --- */
 
 body {
-	padding: 0 2em 1em 2em;
-
-	@include bp(desktop) {
-		padding: 2vw 4.5vw 0 4.5vw;
-	}
-}
-
-.container {
-	display: block;
-
-	@include bp(desktop) {
-
-		header, section {
-			width: 48%;
-		}
-
-		.info {
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-between;
-
-			section {
-				flex: 0 0 48%;
-
-				&:nth-child(2) h2 { padding-top: 0.5em; }
-			}
-		}
-
-	}
-}
-
-h1, h2 {
-	border-bottom: solid 1px #DDD;
+	padding: 2em 3em;
 }
 
 a {
 	text-decoration: none;
-	color: #800;
+	color: #333;
 	transition: all 0.3s ease;
+	background: #EFEFEF;
+	border-radius: 0.3em;
+	outline: none;
 
+	&:focus,
 	&:hover {
-		color: #090;
+		background: #222;
+		color: #FFF;
+	}
+
+	&:active {
+		background: #060;
+		color: #FFF;
 	}
 }
 
-section {
+article {
+	max-width: 60rem;
+}
 
-	span {
-		display: block;
-	}	
+header {
+	padding-bottom: 4rem;
 
-	ul {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-
-		@include bp(desktop) {
-		}
+	h1 {
+		margin-bottom: 0;
 	}
+}
+
+section + section {
+	padding-top: 2rem;
+
+	a {
+		background: #FEFEFE;
+	}
+}
+
+section ul {
+	line-height: 1.2;
+	padding-bottom: 2rem;
 
 	li {
-		padding-bottom: 1em;
-		flex: 0 0 49%;
-		width: 49%;
-		
-		@include bp(desktop) {
+		padding: 1em 2em 0 0;
+
+		& + li {
 		}
 	}
 
 	a {
 		display: block;
-		padding: 0.8em 1em;
-		border-radius: 0.3em;
-		background: rgba(0,0,0,0.03);
-		overflow: hidden;
-		white-space: nowrap;
+		padding: 1em 1.3em;
+	}
 
-		@include bp(phone) {
-			font-size: 0.9em;
+	span:nth-child(1) {
+		display: block;
+		font-weight: 600;
+		font-size: 1.1em;
+	}
+
+	span:nth-child(2),
+	span:nth-child(3) {
+		font-size: 0.9em;
+	}
+		
+	span:nth-child(3) {
+		&:before {
+			display: inline-block;
+			content: '-';
+			padding-right: 0.3em;
 		}
+	}
 
-		.value {
-			color: #CCC;
-			transition: all 0.4s ease-in;
-
-			i {
-				font-style: normal;
-			}
-
-			@include bp(phone) {
-				i { display: none; }
-			}
-		}
-
-		&:hover {
-			background: rgba(0,0,0,0.09);
-
-			.value {
-				color: #999;
-			}
-		}
+	span:nth-child(3) {
+		font-size: 0.9em;
 	}
 }
