--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -2,6 +2,7 @@
  * Typography
  * --- --- --- */
 
+
 html {
 	font-size: 12px;
 }
@@ -9,11 +10,10 @@ html {
 body {
 	font-size: calc(100% + 0.5vw);
 	line-height: 1.5;
-	font-family: "Avenir Next", sans-serif;
+	font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 h1, h2, h3 {
-	font-family: "Avenir Next", sans-serif;
 	font-weight: 500;
 	padding-bottom: 1rem;
 	margin-bottom: 1.5rem;
